# cost-map-exercise

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
config/: config.yaml
include/: header.h  header.hpp
include/cost_map/: cost_map_exercise_node.h
include/simple_layer/: grid_layer.hpp
include/simple_layers/: grid_layer.h  grid_layer.hpp
launch/: cost_map_exercise.launch
src/: cost_map_exercise_node.cpp  grid_layer.cpp
src/simple_layer/: grid_layer.cpp
src/simple_layers/: grid_layer.cpp
